src/syntax/tests/data/negative/for-loop-is-not-an-expression.hsh
result = for var in iter do var() end
